feat(main): Add basic functions

--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,188 @@
-body{
-    background-color:antiquewhite;
-    margin: 20%;
-    margin-top: 10%;
+@import url('http://fonts.googleapis.com/css?family=Roboto');
+
+:root {
+    --white-color: #fff;
+    --dark-color: #333;
+    --accent-color: #DB3421;
+    --second-accent-color: #21DB7A;
+
+    --primary-color: var(--dark-color);
+    --background-color: var(--white-color);
+    --background-header-color: var(--white-color);
+    --header-font: 'Roboto', sans-serif;
+    --body-font: 'Roboto', sans-serif;
+    --link-color: var(--accent-color);
+    --link-hover-color: var(--second-accent-color);
 }
-h1{
+
+.dark-mode {
+    --primary-color: var(--white-color);
+    --background-color: var(--dark-color);
+    --background-header-color: var(--dark-color);
+    --link-color: var(--accent-color);
+    --link-hover-color: var(--second-accent-color);
+}
+
+body {
+    color: var(--primary-color);
+    background-color: var(--background-color);
+    font-family: var(--body-font);
+}
+
+header {
+    background-color: var(--background-header-color);
+    padding: 10px;
     text-align: center;
 }
-h1 { font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace; font-size: 24px; font-style: normal; font-variant: normal; font-weight: bold; line-height: 26.399999618530273px; } h3 { font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace; font-size: 14px; font-style: normal; font-variant: normal; font-weight: bold; line-height: 15.399999618530273px; } p { font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.571430206298828px; }
 
-.typewriter {
-    font-family: Courier, monospace;
-	display: inline-block;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--header-font);
 }
 
-.typewriter-text {
+a {
+    color: var(--link-color);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--link-hover-color);
+}
+
+button {
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
     display: inline-block;
-  	overflow: hidden;
-  	letter-spacing: 2px;
- 	animation: typing 5s steps(30, end), blink .75s step-end infinite;
-    white-space: nowrap;
-    font-size: 30px;
-    font-weight: 700;
-    border-right: 4px solid orange;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #555;
+}
+
+#navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    padding: 10px;
+    z-index: 1000;
+}
+
+#navbar button {
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+#navbar button:hover {
+    background-color: #555;
+}
+
+.hidden {
+    display: none;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.header-image {
+    width: 100px;
+    /* lub inny wymiar */
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+/* Reszta Twoich stylów */
+
+section {
+    margin: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    /* Delikatna obramówka */
+    border-radius: 8px;
+    /* Zaokrąglone rogi */
+}
+
+#projects {
+    background-color: var(--background-color)
+}
+
+#hobby-projects {
+    background-color: var(--background-color)
+}
+
+section h2 {
+    text-align: center;
+    color: var(--primary-color);
+}
+
+.project-list {
+    display: flex;
+    overflow-x: auto;
+    padding: 10px;
+    gap: 20px;
+}
+
+.project-card {
+    flex: 0 0 auto;
+    /* Utrzymaj karty w jednym rzędzie i pozwól im być nieelastycznymi */
+    width: 250px;
+    /* Szerokość karty */
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: center;
+}
+
+.project-card img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.project-card h3,
+.project-card p {
+    margin: 10px;
+}
+
+.project-details {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 1000;
+    padding: 20px;
     box-sizing: border-box;
+    display: none;
 }
 
-@keyframes typing {
-    from { 
-        width: 0% 
-    }
-    to { 
-        width: 100% 
-    }
+.project-details img {
+    max-width: 100%;
+    height: auto;
 }
 
-@keyframes blink {
-    from, to { 
-        border-color: transparent 
-    }
-    50% { 
-        border-color: orange; 
-    }
-}
+/* Styl dla przycisku zamknięcia */
